[gd_scene load_steps=15 format=2]

[ext_resource path="res://Nodes/Stages/Checkpoint.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckpointDeactivated.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckpointActivate1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckpointActivate2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckpointActivate3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckpointActivate4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckpointActivate5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckPointActive1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckPointActive2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckPointActive3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckPointActive4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Checkpoint/CheckPointActive5.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "Deactivated",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "Activation",
"speed": 12.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Activated",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.1845, 33.1137 )

[node name="Checkpoint" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Deactivated"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.85159 )
shape = SubResource( 2 )

[node name="RespawnPosition" type="Position2D" parent="."]
position = Vector2( -0.214638, 18.4591 )

[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
